2002-12-04  Derek Price  <derek@ximbiot.com>

	* options.h: Remove CVS_ADMIN_GROUP.

2002-12-02  Larry Jones  <lawrence.jones@eds.com>

	* commit.c (commit): Strip leading zeros from numeric revision
	in addition to trailing dots.

2002-11-22  Larry Jones  <lawrence.jones@eds.com>

	* sanity.sh: Note that the tests run for a long time.

	* checkout.c (safe_location): Use xstrdup, not strdup.
	(Reported by Terrence Enger <tenger@iSeries-guru.com>.)

2002-11-19  Larry Jones  <lawrence.jones@eds.com>

	* log.c (log_expand_revlist): Fix cross-branch correction code.

	* sanity.sh: Set $LANG for systems that ignore $LC_ALL.
	(rcs2-7): Change date offset from 100 months to 96 months to reduce
	periodic problems with invalid dates.

2002-11-12  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcslib-symlink): Use rm -f rather than a simple rm when
	removing links because under some configurations of RH Linux 8.0 the
	script pauses to ask for removal approval.

2002-11-08  Derek Price  <derek@ximbiot.com>

	* sanity.sh (importc): Update the use of the touch command to be
	compliant with POSIX 1003.1-2001, SUS2, and SUS3 now that GNU touch
	supports this.  If this breaks any test platforms we should test
	the behavior of touch like we do for other tools.

2002-11-03  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcs2-7): Notate with a wild untested hypothesis.

2002-11-03  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcs2-7): Notate with three more failure dates.

2002-10-25  Derek Price  <derek@ximbiot.com>

	* root.c: Change some calls to SYSTEM_CLEANUP() and then exit() to
	more appropriate calls to error_exit().
	* server.c: Ditto.
	* tag.c: Ditto.

2002-10-24  Derek Price  <derek@ximbiot.com>

	* buffer.c (stdio_buffer_shutdown): Remove the getc() call used to
	detect spurious output from clients since getc() would sometimes
	block and hang indefinately if the client kept the conection open but
	sent no data.  Bug reports state that this hapened frequently with